--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,50 +2,87 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id = "@+id/layout"
+    android:background="#000000"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/speedText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="Example"
+        android:textColor="#FFFFFF"
         android:textSize="80sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textSpeed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textInput" />
 
-    <Button
+    <ImageButton
         android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/start"
+        android:background="#454545"
+        android:src="@drawable/play"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textSpeed" />
+        app:layout_constraintTop_toBottomOf="@+id/textSize" />
 
     <com.google.android.material.slider.Slider
         android:id="@+id/textSpeed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:valueFrom = "10"
-        android:valueTo = "500"
-        app:layout_constraintBottom_toTopOf="@id/startButton"
+        android:valueFrom="10"
+        android:valueTo="500"
+        app:layout_constraintBottom_toTopOf="@id/textSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/speedText" />
+        app:layout_constraintTop_toBottomOf="@id/speedText"
+        app:thumbColor="#FFFFFF"
+        app:tickColorInactive="#FFFFFF"
+        app:trackColorActive="#FFFFFF"
+        app:trackColorInactive="#FFFFFF" />
 
     <com.google.android.material.slider.Slider
+        android:id="@+id/textSize"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textSize"
         app:layout_constraintBottom_toTopOf="@id/startButton"
-        app:layout_constraintTop_toBottomOf="@id/textSpeed"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/textSpeed"
+        app:thumbColor="#FFFFFF"
+        app:tickColorActive="#FFFFFF"
+        app:tickColorInactive="#FFFFFF"
+        app:trackColorActive="#FFFFFF"
+        app:trackColorInactive="#FFFFFF" />
+
+
+    <EditText
+        android:id="@+id/textInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Enter text here"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@id/speedText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/submit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#454545"
+        android:text="Submit"
+        app:layout_constraintBottom_toTopOf="@+id/speedText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInput" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
