--- a/app/src/main/res/layout/activity_reading.xml
+++ b/app/src/main/res/layout/activity_reading.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
     tools:context=".reading">
 
     <TextView
@@ -23,7 +22,8 @@
         android:id="@+id/pauseButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/pause"
+        android:src="@drawable/ic_baseline_pause_circle_filled_24"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/stopButton"
         app:layout_constraintStart_toEndOf="@id/decrease"
@@ -33,8 +33,8 @@
         android:id="@+id/stopButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src = "@drawable/stop"
-        android:background="#454545"
+        android:src = "@drawable/ic_baseline_stop_circle_24"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/increase"
         app:layout_constraintStart_toEndOf="@+id/pauseButton"
@@ -44,8 +44,8 @@
         android:id="@+id/increase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src = "@drawable/ff"
-        android:background="#454545"
+        android:src = "@drawable/ic_baseline_fast_forward_24"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/stopButton"
@@ -55,8 +55,8 @@
         android:id="@+id/decrease"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src = "@drawable/rw"
-        android:background="#454545"
+        android:src = "@drawable/ic_baseline_fast_rewind_24"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/pauseButton"
         app:layout_constraintStart_toStartOf="parent"
