--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,11 +9,11 @@
 
     <EditText
         android:id="@+id/textInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="294dp"
+        android:layout_height="85dp"
         android:ems="10"
         android:hint="Enter text here"
-        android:textColor="#FFFFFF"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toTopOf="@id/speedText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/submit"
         app:layout_constraintTop_toBottomOf="@+id/textInput" />
-        >
+    >
 
     <com.google.android.material.slider.Slider
         android:id="@+id/textSpeed"
@@ -85,12 +85,14 @@
         android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/play"
-
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_baseline_play_circle_filled_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textSize"/> />
+        app:layout_constraintTop_toBottomOf="@+id/textSize" />
+    />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
