--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="Background">#333333</color>
     <color name="white">#FFFFFF</color>
     <color name="green">#64DD17</color>
+    <color name="dark_blue">#1C2331</color>
 </resources>
