--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,14 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+
+        <item name="android:colorBackground">@color/dark_blue</item>
+        <item name="android:windowBackground">@color/dark_blue</item>
+
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/Primary</item>
-        <item name="colorPrimaryDark">@color/PrimaryDark</item>
-        <item name="colorAccent">@color/Accent</item>
+        <item name="colorPrimary">@color/Accent</item>
+        <item name="colorPrimaryDark">@color/AccentLight</item>
+        <item name="colorAccent">@color/white</item>
 
         <!-- Text and background colors. -->
         <item name="android:textColor">@color/white</item>
@@ -20,10 +24,9 @@
 
     <!-- Button style. -->
     <style name="ButtonStyle" parent="Widget.AppCompat.Button">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:backgroundTint">@color/Accent</item>
     </style>
-
 
     <!-- Edit text style. -->
     <style name="EditTextStyle" parent="Widget.AppCompat.EditText">
