--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -52,7 +52,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/submit"
         app:layout_constraintTop_toBottomOf="@+id/textInput" />
-    >
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/speed"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="@+id/textSpeed"
+        app:layout_constraintStart_toStartOf="@+id/textSpeed"
+        app:layout_constraintTop_toBottomOf="@+id/textSpeed" />
+
+    <TextView
+        android:id="@+id/speedLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/size"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="@+id/textSize"
+        app:layout_constraintStart_toStartOf="@+id/textSize"
+        app:layout_constraintTop_toBottomOf="@+id/textSize" />
 
     <com.google.android.material.slider.Slider
         android:id="@+id/textSpeed"
@@ -64,7 +84,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/speedText"
-        app:thumbColor="#FFFFFF"
         app:tickColorInactive="#FFFFFF"
         app:trackColorActive="#FFFFFF"
         app:trackColorInactive="#FFFFFF"
@@ -78,7 +97,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textSpeed"
-        app:thumbColor="#FFFFFF"
         app:tickColorActive="#FFFFFF"
         app:tickColorInactive="#FFFFFF"
         app:trackColorActive="#FFFFFF"
@@ -97,7 +115,5 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textSize" />
-    />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
