--- a/app/src/main/res/layout/activity_los.xml
+++ b/app/src/main/res/layout/activity_los.xml
@@ -23,8 +23,8 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30dp"
-                android:text="* * * * * * *" />
+                android:textSize="30sp"
+                android:text="@string/_stars2" />
         </TableRow>
 
         <TableRow
@@ -35,8 +35,8 @@
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30dp"
-                android:text="* * * * * * *" />
+                android:textSize="30sp"
+                android:text="@string/_stars" />
         </TableRow>
 
         <TableRow
@@ -47,8 +47,8 @@
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30dp"
-                android:text="* * * * * * *" />
+                android:textSize="30sp"
+                android:text="@string/_stars3" />
         </TableRow>
 
         <TableRow
@@ -59,8 +59,8 @@
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30dp"
-                android:text="* * * * * * *" />
+                android:textSize="30sp"
+                android:text="@string/_stars4" />
         </TableRow>
 
         <TableRow
@@ -71,8 +71,8 @@
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30dp"
-                android:text="* * * * * * *" />
+                android:textSize="30sp"
+                android:text="@string/_stars5" />
         </TableRow>
     </TableLayout>
 
