--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,25 +29,25 @@
         android:layout_weight="1">
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/mainpage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="Main" />
+            android:layout_weight="1"
+            android:text="@string/main" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/exercises"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="Exercises" />
+            android:layout_weight="1"
+            android:text="@string/exercises" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="Profile" />
+            android:layout_weight="1"
+            android:text="@string/profile" />
 
     </LinearLayout>
 
