--- a/app/src/main/res/layout/fragment_exercises.xml
+++ b/app/src/main/res/layout/fragment_exercises.xml
@@ -8,19 +8,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp">
 
         <Button
             android:id="@+id/schulte"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Schulte Table" />
+            android:text="@string/schulte_table" />
 
         <Button
             android:id="@+id/los"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Line of Sight" />
+            android:text="@string/line_of_sight" />
 
         <Button
             android:id="@+id/button3"
