--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="white">#FFFFFF</color>
     <color name="green">#64DD17</color>
     <color name="dark_blue">#1C2331</color>
+    <color name="butColor">#0A1045</color>
 </resources>
