--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,20 +12,18 @@
         android:layout_width="294dp"
         android:layout_height="85dp"
         android:ems="10"
-        android:hint="@string/enter_text_here"
+        android:hint="Enter text here"
         android:textColorHint="@color/white"
         app:layout_constraintBottom_toTopOf="@id/speedText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:inputType="text"
-        android:importantForAutofill="no" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/speedText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/example"
+        android:text="Example"
         android:textColor="#FFFFFF"
         android:textSize="80sp"
         app:layout_constraintBottom_toTopOf="@+id/textSpeed"
@@ -37,7 +35,7 @@
         android:id="@+id/submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/submit"
+        android:text="Submit"
         app:layout_constraintBottom_toTopOf="@+id/speedText"
         app:layout_constraintEnd_toEndOf="@+id/selectButton"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +45,7 @@
         android:id="@+id/selectButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/select"
+        android:text="Select"
         app:layout_constraintBottom_toTopOf="@+id/speedText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/submit"
@@ -67,8 +65,7 @@
         app:thumbColor="#FFFFFF"
         app:tickColorInactive="#FFFFFF"
         app:trackColorActive="#FFFFFF"
-        app:trackColorInactive="#FFFFFF"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:trackColorInactive="#FFFFFF" />
 
     <com.google.android.material.slider.Slider
         android:id="@+id/textSize"
@@ -82,15 +79,13 @@
         app:tickColorActive="#FFFFFF"
         app:tickColorInactive="#FFFFFF"
         app:trackColorActive="#FFFFFF"
-        app:trackColorInactive="#FFFFFF"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:trackColorInactive="#FFFFFF" />
 
     <ImageButton
         android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/selector"
-        android:contentDescription="@string/start"
         android:src="@drawable/ic_baseline_play_circle_filled_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
