--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/background"
     tools:context=".MainFragment">
 
     <EditText
@@ -24,8 +25,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Example"
-        android:textColor="#FFFFFF"
-        android:textSize="80sp"
+        android:background="#00000000"
+        android:textColor="#a9a9a9"
+        android:textSize="90sp"
         app:layout_constraintBottom_toTopOf="@+id/textSpeed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,29 +59,34 @@
         android:layout_width="290dp"
         android:layout_height="36dp"
         android:valueFrom="10"
-        android:valueTo="500"
+        android:valueTo="510"
+        android:stepSize="50"
         app:layout_constraintBottom_toTopOf="@id/textSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/speedText"
-        app:thumbColor="#FFFFFF"
+        app:thumbColor="#808080"
+        app:tickColorActive="#a9a9a9"
         app:tickColorInactive="#FFFFFF"
-        app:trackColorActive="#FFFFFF"
-        app:trackColorInactive="#FFFFFF" />
+        app:trackColorActive="#808080"
+        app:trackColorInactive="#a9a9a9" />
 
     <com.google.android.material.slider.Slider
         android:id="@+id/textSize"
         android:layout_width="290dp"
         android:layout_height="38dp"
+        android:valueFrom="20"
+        android:valueTo="90"
+        android:stepSize="10"
         app:layout_constraintBottom_toTopOf="@id/startButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textSpeed"
-        app:thumbColor="#FFFFFF"
-        app:tickColorActive="#FFFFFF"
+        app:thumbColor="#808080"
+        app:tickColorActive="#a9a9a9"
         app:tickColorInactive="#FFFFFF"
-        app:trackColorActive="#FFFFFF"
-        app:trackColorInactive="#FFFFFF" />
+        app:trackColorActive="#808080"
+        app:trackColorInactive="#a9a9a9" />
 
     <ImageButton
         android:id="@+id/startButton"
